--- a/manifest.json
+++ b/manifest.json
@@ -25,8 +25,8 @@
                 "ask": {
                     "en": "Choose a path for Radicale"
                 },
-                "example": "/sync",
-                "default": "/sync"
+                "example": "/sync/",
+                "default": "/sync/"
             }
         ]
     }
